# jelly

./: .coverage  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/jellyjelly/: __init__.py  auth.py  client.py  models.py  search.py
tests/: conftest.py  test_auth.py  test_client.py  test_models.py  test_search.py
